--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                 <div class="contact__options contact__options--right contact__text">
                   <img src="img/SVG/office.svg" alt="Address" class="contact__image">
                   <!-- <h3>Address</h3> -->
-                  <p class="contact__text--desktop">Ladyplace Chambers,<br> Kemp House, 152-160 City Road,<br> London, EC1V 2NX,<br> and in Surrey.</p>
+                  <p class="contact__text--desktop">Ladyplace Chambers,<br> Kemp House, 152-160 City Road, London, EC1V 2NX,<br> and in Surrey.</p>
                   <p class="contact__text--mobile-address">Ladyplace Chambers<br> Kemp House<br> 152-160 City Road<br> London<br> EC1V 2NX<br> and in Surrey.</p>
                 </div>
               </div>
