Further media queries for phones

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
             </div>
           </nav>
         </div>
+        <div class="header__title heading-primary">
+          <h1>Bruce Stuart Law</h1>
+        </div>
       </div>
       <!-- DOWN ARROW SECTION BREAK-->
       <div class="section-break">
@@ -100,7 +103,7 @@
       </div>
       <!-- NOTEWORTHY CASES SECTION -->
       <section id="cases" class="cases">
-        <div class="cases__container">
+        <div class="cases__background">
           <h2 class="cases__title heading-secondary u-margin-bottom-small">Noteworthy Cases</h2>
           <div class="cases__category cases__category--fraud">
             <h3 class="heading-tertiary heading-tertiary--cases">Fraud</h3>
