latest tweaks to colour variables and snagging

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <ul class="about__list">
                   <li class="about__list-item">Money Laundering</li>
                   <li class="about__list-item">Corporate Fraud</li>
-                  <li class="about__list-item">Money Laundering</li>
+                  <!--<li class="about__list-item">Money Laundering</li>-->
                   <li class="about__list-item">VAT Tax Tribunals</li>
                 </ul>
               </div>
