Started bulding additional info page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         <div class="navigation">
           <nav class="navigation__nav">
             <div class="navigation__logo">
-              <img src="img/logo.png" alt="Bruce Stuart Law">
+              <a href="#">
+                <img src="img/logo.png" alt="Bruce Stuart Law">
+              </a>
             </div>
             <!-- DESKTOP NAVIGATION -->
             <div class="navigation__desktop">
@@ -253,9 +255,10 @@
             <h2>Bruce Stuart Law</h2>
             <div class="footer__navigation">
               <ul class="footer__list">
-                <li class="footer__list-item"><a href="#about" class="">About</a></li>
+                <li class="footer__list-item"><a href="#about" class="">About </a></li>
                 <li class="footer__list-item"><a href="#cases" class="">Noteworthy Cases</a></li>
                 <li class="footer__list-item"><a href="#contact" class="">Contact</a></li>
+                <li class="footer__list-item"><a href="/webpages/additional-info.html" class="">Additional Information</a></li>
               </ul>
             </div>
           </div>
