minor updates to index.html

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
     <link href="https://fonts.googleapis.com/css?family=Arimo:400,400i,700" rel="stylesheet">
 
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="shortcut icon" type="image/png" href="../img/favicon.png">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="shortcut icon" type="image/png" href="/img/favicon.png">
 
     <title>Bruce Stuart Law</title>
   </head>
@@ -18,8 +18,8 @@
         <div class="navigation">
           <nav class="navigation__nav">
             <div class="navigation__logo">
-              <a href="../index.html">
-                <img src="../img/logo.png" alt="Bruce Stuart Law">
+              <a href="#">
+                <img src="/img/logo.png" alt="Bruce Stuart Law">
               </a>
             </div>
             <!-- DESKTOP NAVIGATION -->
@@ -53,7 +53,7 @@
       <!-- DOWN ARROW SECTION BREAK-->
       <div class="section-break">
         <div class="section-break__right">
-        <a href="#about"><img class="section-break--animated" src="../img/expand-button.png" alt="Scroll Down"></a>
+        <a href="#about"><img class="section-break--animated" src="/img/expand-button.png" alt="Scroll Down"></a>
         </div>
       </div>
       <!-- ABOUT SECTION-->
@@ -66,7 +66,7 @@
             <div class="col-1-of-3">
               <div class="about__small">
                 <div class="about__shape">
-                  <img class="about__image" src="../img/bruce-small.jpg" alt="Bruce Stuart">
+                  <img class="about__image" src="/img/bruce-small.jpg" alt="Bruce Stuart">
                 </div>
                 <h2 class="heading-secondary about__heading">Bruce Ian Stuart</h2>
               </div>
@@ -105,7 +105,7 @@
       <!-- DOWN ARROW SECTION BREAK-->
       <div class="section-break">
         <div class="section-break__left">
-        <a href="#cases"><img class="section-break--animated" src="../img/expand-button.png" alt="Scroll Down"></a>
+        <a href="#cases"><img class="section-break--animated" src="/img/expand-button.png" alt="Scroll Down"></a>
         </div>
       </div>
       <!-- NOTEWORTHY CASES SECTION -->
@@ -221,7 +221,7 @@
       <!-- DOWN ARROW SECTION BREAK-->
       <div class="section-break">
         <div class="section-break__left">
-        <a href="#contact"><img class="section-break--animated" src="../img/expand-button.png" alt="Scroll Down"></a>
+        <a href="#contact"><img class="section-break--animated" src="/img/expand-button.png" alt="Scroll Down"></a>
         </div>
       </div>
       <!-- ADDITIONAL INFORMATION SECTION-->
@@ -255,7 +255,7 @@
                 </ul>
               </p>
               <p class="additional-info__item-text">
-                I will provide you with a quote as soon as possible. I always aim to set out quotes clearly, but if you receive your quote and there is something you do not understand, please <a href="../index.html#contact">contact me</a>.
+                I will provide you with a quote as soon as possible. I always aim to set out quotes clearly, but if you receive your quote and there is something you do not understand, please <a href="#contact">contact me</a>.
               </p>
             </div>
           </div>
@@ -377,7 +377,7 @@
       <!-- DOWN ARROW SECTION BREAK-->
       <div class="section-break">
         <div class="section-break__left">
-        <a href="#contact"><img class="section-break--animated" src="../img/expand-button.png" alt="Scroll Down"></a>
+        <a href="#contact"><img class="section-break--animated" src="/img/expand-button.png" alt="Scroll Down"></a>
         </div>
       </div>
       <!-- CONTACT SECTION -->
@@ -392,7 +392,7 @@
             <div class="row">
               <div class="col-1-of-3">
                 <div class="contact__options contact__options--left contact__text">
-                  <img src="../img/SVG/phone.svg" alt="Phone" class="contact__image">
+                  <img src="/img/SVG/phone.svg" alt="Phone" class="contact__image">
                   <!-- <h3>Phone</h3> -->
                   <div class="contact__text--desktop">
                     <p class="contact__text--desktop-email">020 7097 5886</p>
@@ -404,7 +404,7 @@
               </div>
               <div class="col-1-of-3">
                 <div class="contact__options contact__options--middle contact__text">
-                  <img src="../img/SVG/envelop.svg" alt="Email" class="contact__image">
+                  <img src="/img/SVG/envelop.svg" alt="Email" class="contact__image">
                   <!-- <h3>Email</h3> -->
                   <div class="contact__text--desktop">
                     <p class="contact__text--desktop-email"><a href="mailto:bs@brucestuart.law" class="contact__links">bs@brucestuart.law</a></p>
@@ -418,7 +418,7 @@
               </div>
               <div class="col-1-of-3">
                 <div class="contact__options contact__options--right contact__text">
-                  <img src="../img/SVG/office.svg" alt="Address" class="contact__image">
+                  <img src="/img/SVG/office.svg" alt="Address" class="contact__image">
                   <!-- <h3>Address</h3> -->
                   <p class="contact__text--desktop">Ladyplace Chambers,<br> Kemp House, 152-160 City Road, London, EC1V 2NX,<br> and in Surrey.</p>
                   <p class="contact__text--mobile-address">Ladyplace Chambers<br>Kemp House<br>152-160 City Road<br>London<br>EC1V 2NX<br>and in Surrey.</p>
