attempted fix for contact number on mobile

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                     <p class="contact__text--desktop-email">020 7097 5886</p>
                   </div>
                   <div class="contact__text--mobile contact__text--mobile-phone">
-                    <p class="contact__text--mobile-phone" style="color:#b7b7b7">020 7097 5886</p>
+                    <p id="phone-link" class="contact__text--mobile-phone">020 7097 5886</p>
                   </div>
                 </div>
               </div>
