Added two new Fraud cases

--- a/index.html
+++ b/index.html
@@ -121,7 +121,13 @@
             <h3 class="heading-tertiary heading-tertiary__cases heading-tertiary__cases--fraud">Fraud</h3>
             <ul class="cases__list">
               <li class="cases__list-item">
-                R. v. Hall.(2017) Largest copycat website fraud prosecuted by Trading Standards. 3 Month trial, leading Junior counsel.
+                SFO v. TS (2020) - Legal insurance fraud, expected to be a 4 -6 month trial.
+              </li>
+              <li class="cases__list-item">
+                Trading Standards v LM and 8 others (2020) - Fraud and money laundering expected to be a 4 month trial.
+              </li>
+              <li class="cases__list-item">
+                R. v. Hall. (2017) - Largest copycat website fraud prosecuted by Trading Standards. 3 Month trial, leading Junior counsel.
               </li>
               <li class="cases__list-item">
                 R.v.G (2016) - Boiler Room fraud, Rare earth metals.
