Added new address and email

--- a/index.html
+++ b/index.html
@@ -415,10 +415,12 @@
                   <div class="contact__text--desktop">
                     <p class="contact__text--desktop-email"><a href="mailto:bs@brucestuart.law" class="contact__links">bs@brucestuart.law</a></p>
                     <p class="contact__text--desktop-email"><a href="mailto:bs@seriousfrauddefence.com" class="contact__links">bs@seriousfrauddefence.com</a></p>
+                    <p class="contact__text--desktop-email"><a href="mailto:bs@ladyplacechambers.uk" class="contact__links">bs@ladyplacechambers.uk</a></p>
                   </div>
                   <div class="contact__text--mobile">
                     <p class="contact__text--mobile-email"><a href="mailto:bs@brucestuart.law" class="contact__links">bs@brucestuart.law</a></p>
                     <p class="contact__text--mobile-email"><a href="mailto:bs@seriousfrauddefence.com" class="contact__links">bs@seriousfrauddefence.com</a></p>
+                    <p class="contact__text--mobile-email"><a href="mailto:bs@ladyplacechambers.uk" class="contact__links">bs@ladyplacechambers.uk</a></p>
                  </div>
                 </div>
               </div>
@@ -426,8 +428,8 @@
                 <div class="contact__options contact__options--right contact__text">
                   <img src="img/SVG/office.svg" alt="Address" class="contact__image">
                   <!-- <h3>Address</h3> -->
-                  <p class="contact__text--desktop">Ladyplace Chambers,<br> Kemp House, 152-160 City Road, London, EC1V 2NX,<br> and in Surrey.</p>
-                  <p class="contact__text--mobile-address">Ladyplace Chambers<br>Kemp House<br>152-160 City Road<br>London<br>EC1V 2NX<br>and in Surrey.</p>
+                  <p class="contact__text--desktop">Ladyplace Chambers,<br> Kemp House, 152-160 City Road, London, EC1V 2NX<br><br> Ladyplace Chambers, <br>Shepperton Marina, Felix Lane, <br>Shepperton, TW17 8NS</p>
+                  <p class="contact__text--mobile-address">Ladyplace Chambers<br>Kemp House<br>152-160 City Road<br>London<br>EC1V 2NX<br><br> Ladyplace Chambers, <br>Shepperton Marina, Felix Lane, <br>Shepperton, TW17 8NS</p>
                 </div>
               </div>
             </div>
